--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ dask==0.10.0
 datashape==0.5.2
 decorator==4.0.10
 dill==0.2.5
+dj-database-url==0.4.2
 Django==1.10.2
 djangorestframework==3.5.3
 docutils==0.12
@@ -156,6 +157,7 @@ traitlets==4.2.1
 unicodecsv==0.14.1
 virtualenv==15.1.0
 Werkzeug==0.11.10
+whitenoise==3.3.0
 xlrd==1.0.0
 XlsxWriter==0.9.2
 xlwings==0.7.2
